First working version of CUDA for entropy

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "main",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/piccoulomb",
+            "program": "${workspaceRoot}/coulombStructurePreserving",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
