Update gitignore and vscode settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "main",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/coulombStructurePreserving",
+            "program": "${workspaceRoot}/coulomb",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
