--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "lib": true,
+        "out": true,
+        "plots": true,
+        "bin": true
+    },
     "files.associations": {
         "*.inc": "cpp",
         "cassert": "cpp",
